  AbstractSearchPanel renamed to ColumnSearchPanel
  SearchType.getImageName() added
  DefaultEntityTableSearchModel no longer sets the search state during construction, call to bindEvents() moved to initialize()
  EntityPanel, editControlPanel initialized during setEditPanelState()
  PropertyFilterModelProvider/DefaultPropertyFilterModelProvider added
  PropertySearchModelProvider/DefaultPropertySearchModelProvider added
  PropertyComboBoxModel interface removed, FilteredComboBoxModel used instead
  DefaultPropertyComboBoxModel simplified
  EntityLookupModel.description field added
  DefaultEntityComboBoxModel.performQuery() privatized
  ValueChangeMapEditPanel.getEditModel() finalized
  EntityEditPanel.getEntityEditModel() added
  AbstractFilteredTablePanel.getFilteredTableModel() renamed to getTableModel()
  EntityTablePanel.getTableModel() renamed to getEntityTableModel()
  DefaultValueChangeMapEditModel.getDefaultValueMap() implementation removed
  DefaultValueChangeMapEditModel renamed to AbstractValueChangeMapEditModel
  EntityTablePanel.initializeUI() renamed to initializePanel(), publicized, call required after panel construction
  EntityTablePanel.panelInitialized field added, functionality mirrors EntityPanel
  EntityTablePanel.additionalPopup/ToolbarControls fields added
  DefaultEntityModel.bindTableModelEvents() functionality moved to DefaultEntityTableModel.setEditModel()
  DefaultEntityModel.updateDetailModelsByActiveEntity() privatized
0.5.9
  Entities.getSearchProperties() used to replace a couple of similar code snippets
  /** {@inheritDoc} */ added
  EntityApplicationPanel.loginRequired field added, isLoginRequired() finalized, setter added
  DomainClassGenerator improved
  EntityPanelProvider now handles null editPanelClass
  EntityImpl.writablePropertiesModified() modified
  EntityImpl.getDefaultValueMap() bug fix
  ColumnSearchModel.searchEnabled renamed to enabled
  Entities.getEntityDefinitions() no longer exposes the EntityDefinition class